--- a/EIS_example.ipynb
+++ b/EIS_example.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install numpy pandas matplotlib impedance\n",
+    "!wget -q https://github.com/wesleykchang/ECS_battery_diagnostics"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
