--- a/EIS_example.ipynb
+++ b/EIS_example.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "!pip install numpy pandas matplotlib impedance\n",
-    "!wget -q https://github.com/wesleykchang/ECS_battery_diagnostics"
+    "!wget -q https://github.com/wesleykchang/ECS_battery_diagnostics/blob/main/EIS%20example.mpt"
    ]
   },
   {
