--- a/EIS_example.ipynb
+++ b/EIS_example.ipynb
@@ -41,7 +41,7 @@
    ],
    "source": [
     "!pip install numpy pandas matplotlib impedance\n",
-    "!wget -q https://github.com/wesleykchang/ECS_battery_diagnostics/blob/main/EIS%20example.mpt"
+    "!wget -q hhttps://github.com/wesleykchang/ECS_battery_diagnostics/raw/main/example_EIS.csv"
    ]
   },
   {
@@ -102,7 +102,7 @@
     "from impedance import preprocessing\n",
     "from impedance.models.circuits import CustomCircuit\n",
     "\n",
-    "file_dir = \"/Users/wesleychang/Desktop/ECS_battery_diagnostics/\"\n",
+    "file_dir = \"/content/\"\n",
     "\n",
     "filenames = ['example_EIS.csv'] #Biologic EIS file \n",
     "fig1 = plt.figure(dpi=300, figsize = (6,4))\n",
