--- a/EIS_example.ipynb
+++ b/EIS_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
    ],
    "source": [
     "!pip install numpy pandas matplotlib impedance\n",
-    "!wget -q hhttps://github.com/wesleykchang/ECS_battery_diagnostics/raw/main/example_EIS.csv"
+    "!wget -q https://github.com/wesleykchang/ECS_battery_diagnostics/raw/main/example_EIS.csv"
    ]
   },
   {
