--- a/EIS_example.ipynb
+++ b/EIS_example.ipynb
@@ -112,11 +112,11 @@
     "for f in filenames:\n",
     "    frequencies, Z = preprocessing.readCSV(file_dir+f) #Use the readBiologic function to import the Biologic .mpt file \n",
     "\n",
-    "    #Define the circuit. Here, we assume each electrode behaves like a resistor and constant phase element (CPE) in parallel. A CPE has both capacitive and resistive features, and models the behavior of the SEI\n",
+    "    #Define the circuit. Here, we assume each electrode behaves like a resistor and capacitor in parallel.\n",
     "    #Lastly, the Warburg models the low frequency diffusion behavior\n",
-    "    circuit = 'R_0-p(R_1,CPE_1)-p(R_2,CPE_2)-Wo_1' \n",
+    "    circuit = 'R_0-p(R_1,C_0)-p(R_2,C_1)-Wo_1' \n",
     "\n",
-    "    #The initial guesses are used for the regression model. Two values are needed for CPE (phase and freq), check documentation \n",
+    "    #The initial guesses are used for the regression model. \n",
     "    initial_guess = [10, 10, 0.1, 0.1, 10, 0.1, 0.1, 0.2, 0.2]\n",
     "\n",
     "    circuit = CustomCircuit(circuit, initial_guess=initial_guess)\n",
