--- a/EIS_example.ipynb
+++ b/EIS_example.ipynb
@@ -117,7 +117,7 @@
     "    circuit = 'R_0-p(R_1,C_0)-p(R_2,C_1)-Wo_1' \n",
     "\n",
     "    #The initial guesses are used for the regression model. \n",
-    "    initial_guess = [10, 10, 0.1, 0.1, 10, 0.1, 0.1, 0.2, 0.2]\n",
+    "    initial_guess = [0.1, 0.1, 0.1, 0.1, 0.1, 0.2, 0.2]\n",
     "\n",
     "    circuit = CustomCircuit(circuit, initial_guess=initial_guess)\n",
     "    circuit.fit(frequencies, Z)\n",
